# ME5413_Final_Project

./: README.md  me5413_bringup.yml  tmux_run.bash
src/3d_loc/gazebo_pose/: CMakeLists.txt  package.xml
src/3d_loc/gazebo_pose/launch/: ground_robot_localization.launch
src/3d_loc/gazebo_pose/src/: ugv_pose_from_gz.cpp
src/3d_loc/hdl_loc/hdl_localization/launch/: hdl_localization.launch
src/jackal_description/urdf/: accessories.urdf.xacro  jackal.gazebo
src/jackal_description/urdf/accessories/: vlp16_mount.urdf.xacro
src/mapping/direct_lidar_inertial_odometry/cfg/: dlio.yaml  params.yaml
src/mapping/direct_lidar_inertial_odometry/launch/: dlio.launch
src/me5413_world/config/params/: costmap_common_params.yaml
src/me5413_world/launch/: navigation.launch  sensor.launch  tele_joy.launch
src/me5413_world/launch/include/: move_base.launch
src/me5413_world/maps/: me5413_world.pgm  me5413_world.yaml  me5413_world_cleaned.pgm
src/me5413_world/rviz/: 3d_loc.rviz  manual.rviz
src/pcd2pgm/launch/: run.launch
src/pcd2pgm/src/: pcd2pgm.cpp
