<?xml version="1.0"?>
<package format="2">
    <name>gazebo_localization</name>
    <version>0.0.0</version>
    <description>The gazebo_localization package</description>

    <maintainer email="e1499127@u.nus.edu">Mohammad Asif</maintainer>


    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>

    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>

    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>gazebo_msgs</depend>

    <export>
    </export>
</package>
